完成#66: platform增加spider最近同步时间
